add coco-caption submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cider"]
 	path = cider
 	url = https://github.com/ruotianluo/cider.git
+[submodule "coco-caption"]
+	path = coco-caption
+	url = https://github.com/ruotianluo/coco-caption.git
